# detection-engineer-tidqdo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  extension.yml  release.yml  security.yml  web.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/kubernetes/apps/backend/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/apps/web/: deployment.yaml  hpa.yaml  service.yaml
infrastructure/kubernetes/base/: configmap.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  resource-quotas.yaml  secrets.yaml  service-accounts.yaml  storage.yaml
infrastructure/kubernetes/monitoring/grafana/: configmap.yaml  deployment.yaml  service.yaml
infrastructure/kubernetes/monitoring/loki/: service.yaml  (+2 more)
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
src/backend/app/: __init__.py  config.py  constants.py  main.py
src/backend/app/api/: __init__.py  deps.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  auth.py  community.py  coverage.py  detections.py  health.py  intelligence.py  libraries.py  organizations.py  translations.py  users.py  webhooks.py
src/backend/app/core/: __init__.py  config.py  events.py  logging.py  security.py
src/backend/app/db/: __init__.py  base.py  init_db.py  session.py
src/backend/app/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/app/middleware/: __init__.py  auth.py  cors.py  error_handling.py  logging.py  rate_limiting.py
src/backend/app/models/: __init__.py  coverage.py  detection.py  intelligence.py  library.py  organization.py  translation.py  user.py  webhook.py
src/backend/app/schemas/: __init__.py  auth.py  coverage.py  detection.py  intelligence.py  library.py  organization.py  translation.py  user.py  webhook.py
src/backend/app/services/: __init__.py  auth.py  cache.py  coverage.py  detection.py  email.py  github.py  intelligence.py  search.py  slack.py  translation.py
src/backend/app/services/coverage/: __init__.py  analyzer.py  mapper.py  mitre.py
src/backend/app/services/genai/: __init__.py  models.py  processor.py  prompts.py  validation.py
src/backend/app/services/intelligence/: __init__.py  ocr.py  parser.py  pdf.py  url.py
src/backend/app/services/translation/: __init__.py  kql.py  sigma.py  spl.py  yara.py
src/backend/app/utils/: __init__.py  formatting.py  pagination.py  rate_limiting.py  security.py  validation.py
src/backend/app/websockets/: __init__.py  connection.py  events.py  handlers.py  manager.py
src/backend/scripts/: lint.sh  migrate.sh  seed.sh  start.sh  test.sh
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_auth.py  test_coverage.py  test_detections.py  test_intelligence.py  test_translations.py
src/backend/tests/test_services/: __init__.py  test_coverage.py  test_genai.py  test_intelligence.py  test_translation.py
src/backend/tests/test_websockets/: __init__.py  test_events.py  test_manager.py
src/web/: .dockerignore  .env.example  .eslintignore  .eslintrc.ts  .prettierrc.ts  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.ts  package.json  tsconfig.json  vite.config.ts
src/web/chrome-extension/: background.ts  content.ts  manifest.json  popup.html  popup.tsx  styles.css
src/web/src/: App.tsx  index.tsx  vite-env.d.ts
(+189 files in other folders)
