[tool.poetry]
name = "ai-detection-platform-backend"
version = "0.1.0"
description = "Enterprise-grade AI-Driven Detection Engineering Platform Backend"
authors = ["Detection Engineering Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/org/ai-detection-platform"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.0.0"
sqlalchemy = "^2.0.0"
langchain = "^0.1.0"
transformers = "^4.35.0"
torch = "^2.1.0"
scikit-learn = "^1.3.0"
pyjwt = "^2.8.0"
redis = "^5.0.0"
elasticsearch = "^8.0.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
isort = "^5.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=90"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
max-complexity = 10