[metadata]
name = ai-detection-platform-backend
description = AI-Driven Detection Engineering Platform Backend
license = MIT
author = Detection Engineering Team
author_email = team@detection-platform.com
url = https://github.com/org/detection-platform

[flake8]
# flake8 3.9.0+
max-line-length = 100
extend-ignore = E203,W503,E231,F403,F405
max-complexity = 12
exclude = .git,__pycache__,build,dist,*.egg-info,venv,migrations
per-file-ignores = 
    __init__.py:F401
    tests/*:S101
max-cognitive-complexity = 15
max-line-complexity = 20
ban-relative-imports = True
docstring-convention = google

[mypy]
# mypy 0.950+
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_unused_ignores = True
show_error_codes = True
exclude = tests/,migrations/,venv/
strict_optional = True
no_implicit_optional = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
plugins = pydantic.mypy

[tool:pytest]
# pytest 7.0+
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --cov=app --cov-report=term-missing --cov-report=xml --cov-report=html --doctest-modules --strict-markers
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
    error::RuntimeWarning
markers =
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    slow: marks tests as slow
asyncio_mode = auto
timeout = 300

[coverage:run]
# coverage 6.0+
source = app
omit = 
    tests/*
    */__init__.py
    */migrations/*
    */config/*
branch = True
concurrency = multiprocessing
data_file = .coverage
parallel = True
relative_files = True

[isort]
# isort 5.0+
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = .git,__pycache__,build,dist,*.egg-info,venv,migrations
known_first_party = app
known_third_party = pytest,fastapi,sqlalchemy,pydantic
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
force_single_line = False
lines_between_types = 1